# ResistCalc

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci-build-test.yml
include/ResistCalc/: Circuit.h  ErrorHandler.h  ResistCalc.h
src/: Circuit.cpp  ErrorHandler.cpp  ResistCalc.cpp  main.cpp
tests/: CMakeLists.txt  CircuitTest.cpp
